# Project_AIoT_Assignment

./: .gitignore  README.md
Amovlab/: .gitignore  install.ps1  install.sh  install_pigpio.sh  run.sh
Amovlab/drone_learn/: hello.py
Amovlab/proj_dronekit_uav/: color_object_tracking.py  simple_go_to.py  uav_target_tracking.py
Amovlab/script/: colavoidance.py  heartbeat.py  obstacle_send.py  takeoff.py
Amovlab/script_sitl/: heartbeat_sitl.py  pipeline_guided_avoid.py  pipeline_sitl.py  pipeline_sitl_auto.py
Amovlab/script_windows/: arming_win.py  heartbeat_win.py  pipeline_win.py  requirements.txt
Amovlab/shell/: cam.sh  git_push.sh
BPI/bpi_camera/: camera1.py
BPI/bpi_image/: demo1.py
BPI/bpi_localai/localai01/backend/cpp/matcha-tts-cpp/: CMakeLists.txt  build.sh  grpc-server.cpp  tts_config.hpp  tts_demo.cpp  tts_demo.hpp  tts_model.cpp  tts_model.hpp  tts_model_downloader.cpp  tts_model_downloader.hpp
BPI/bpi_localai/localai01/backend/cpp/spacemit-asr-cpp/: CMakeLists.txt  ase.cpp  build.sh  grpc-server.cpp
HuatengVision/: install_ubuntu.sh
HuatengVision/SGBM/: camera_configs.py  camera_configs2.py  generate_image.py  run.ps1  test_pointcloud.py  test_pointcloud_wls.py  test_sgbm.py
HuatengVision/SGBM2/: ImageDatasetUndistortRectify.py  camera_configs_auto.py  pipeline.py  refer.py  show_image.py  test_sgbm.py
HuatengVision/SGBM_ETH3D/: camera_configs.py  test_sgbm.py
HuatengVision/SGBM_STB/: Bumblebee.py
HuatengVision/Tools/: ConvertVideo2Img.py  ConvertVideo2ImgDataset.py  ConvertVideo2ImgDatasetLeftRight.py  MoveCalibImageTogether.py  SplitStereoImage_1fig.py  SplitStereoImage_dataset.py
HuatengVision/calibrate_camera_bino/: stereoParams14cm.json  sync_capture.py  sync_capture_ht.py  sync_capture_ht_1024p.py  sync_capture_ht_1024p_1fig.py  sync_capture_ht_512p.py  sync_capture_ht_512p_1fig.py
HuatengVision/camera_mono/: .inscode  main.py  requirements.txt
HuatengVision/camera_python_demo/: cv_grab_callback.py
HuatengVision/capture_image/: image_ht_1024p.py  image_ht_1024p_stereo.py  image_ht_800p_stereo.py  run_raspi_image.sh
HuatengVision/capture_video/: ht_single_show.py  ht_stereo_record.py  ht_stereo_record_1024p.py  ht_stereo_record_800p_raspi.py  run_raspi_video.sh  stereo_debug.py  stereo_record.py  stereo_record_fixed.py  stereo_record_realtime.py
HuatengVision/demo1/: .gitignore  build.ps1  camera_calibration.py  camera_config.py  dis_count.py  readme.MD  requirements.txt  stereo_yolov5.py
HuatengVision/demo_camera_bino/: all_color_pc.py  camera_configs.py  disparity image.py  img_rectified.py
HuatengVision/demo_camera_bino_1usb/: show.py  show2.py
HuatengVision/demo_camera_mono/: README.md  distance_demo.py  focal_length_calibration.py  monocular_distance.py
HuatengVision/demo_camera_python_offcial/: mvsdk.py
HuatengVision/demo_pipeline_bino/: calib_stereo.py  camera_configs.py  collect_calib.py  py_venv_build.ps1  realtime_all_color_pc.py  requirements.txt  test_dual_cam_opt2.py
Point_Cloud_Library_Learn/: make_video_from_pcd.sh  make_video_from_pgm.sh  render_pcd_to_png.py
Point_Cloud_Library_Learn/proj1_use_pcl_in_project/: pcd_write.cpp  run.sh
Point_Cloud_Library_Learn/proj2_matrix_transform/: CMakeLists.txt  matrix_transform.cpp  run.sh
Point_Cloud_Library_Learn/proj3_load_csv/: csv2pcd.py  run.sh  run_dir.sh
Point_Cloud_Library_Learn/proj4_filter/: CMakeLists.txt  Run_loop.sh  run.sh  run_input.sh
Point_Cloud_Library_Learn/proj4_filter/src/: step2_denoise.cpp  step3_segment_water.cpp  step4_cluster_shore.cpp  step5_project_2d.cpp  step6_extract_centerlines.cpp  step6_extract_centerlines_qwen.cpp  step7_interpolate_shores.cpp  step8_generate_occupancy_grid.cpp
Point_Cloud_Library_Learn/utils/: pcl_viewer_usage.txt  point_cloud.h
ROS_VRX/: install.sh
ROS_VRX/netconfig/: save_proxy.bat  set_dns.sh
ROS_YuXiang/launch/: actions.launch.py
ROS_YuXiang/learn0_listen_topic/: run_cpp.sh  run_cpp_oop.sh  run_py.sh
ROS_YuXiang/learn0_listen_topic/src/minimal_topic_oop/: CMakeLists.txt  package.xml
ROS_YuXiang/learn0_listen_topic/src/minimal_topic_oop/include/minimal_topic_oop/: listener_node.hpp  talker_node.hpp
ROS_YuXiang/learn0_listen_topic/src/minimal_topic_oop/src/: listener_node.cpp  main_listener.cpp  main_talker.cpp  talker_node.cpp
ROS_YuXiang/learn1_math_add/: launch_add.sh  launch_add_srv.sh  launch_cpp_node.sh  launch_python_node.sh  run_add.sh  run_add_srv.sh  run_interface.sh  run_math_cpp_talker.sh  run_math_python_talker.sh
ROS_YuXiang/learn1_math_add/src/interface_test/: CMakeLists.txt  package.xml
ROS_YuXiang/learn1_math_add/src/interface_test/msg/: NumberAdd.msg
ROS_YuXiang/learn1_math_add/src/interface_test/srv/: NumberAddResult.srv
ROS_YuXiang/test1.4.4_1_g++/: test.cpp
ROS_YuXiang/test1.4.4_cmake1/: CMakeLists.txt
ROS_YuXiang/test1.4.4_cmake2/: CMakeLists.txt
ROS_YuXiang/test1.4.4_cmake3/: test.sh
ROS_YuXiang/test2.1.1_ros_node1/: ros2_python_node.py  ros2_python_node2.py
ROS_YuXiang/test2.1.2_ros_node2_cpp/: ros2_cpp_node.cpp  run.sh
ROS_YuXiang/test2.2.1_ros_node_pkg_py/: ros_pkg.sh
ROS_YuXiang/test2.3.1_ros_node_pkg_cpp/: ros_pkg.sh  run.sh
ROS_YuXiang/test2.4_workspace/: run.sh  (+1 more)
WelaBoat_ws/: .gitignore  build_yolov5.sh  clear.sh  clear_camera.sh  conda_env_create.sh  environments_fix.sh  fillback.sh  record_bag.sh  record_bag_gps.sh  run.sh  run_capture.sh  run_debug.sh  run_fillback.sh  run_pipeline.sh  run_simulation.sh  run_yolov5.sh
WelaBoat_ws/src/freespace/freespace_lidar_node/: CMakeLists.txt  package.xml
WelaBoat_ws/src/freespace/freespace_lidar_node/include/freespace_lidar_node/: river_mapper.hpp
WelaBoat_ws/src/freespace/freespace_lidar_node/src/: main.cpp  river_mapper.cpp
arduino_cam_web/: arduino_cam_web.ino
arduino_midiplayer/: arduino_midiplayer.ino
arduino_mqtt/: arduino_mqtt.ino  ping_test.py
esp32_s3/: main.cpp  test_mpu6050.cpp
proj_gpio/: PWM_test.py  hcsr04_test.py  key_test.py  led_test.py
proj_gpio_ros/: run.sh
proj_screen/: platformio.ini
quadruped_RL/: install.sh  quadruped_RL.py  requirements.txt
(+447 files in other folders)
